--- a/produtos.html
+++ b/produtos.html
@@ -106,7 +106,7 @@
             </ul>
           </nav>
         <footer>
-            <p> © 2023. Portfólio desenvolvido por
+            <p> © 2023. Projeto desenvolvido por
               <a href="https://github.com/Gabriel-ortizz" target="_blank">Gabriel-Ortiz</a>.
             </p>
           </footer>
