--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Barbearia Souza</title>
-  <meta name="description" content="Portifolio do desenvolvedor front-end Gabriel Ortiz">
+  <title>Alex Barbearia</title>
+  <meta name="description" content="Alex Barbearia">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
@@ -34,17 +35,13 @@
             <span class="menu__text">Contato</span>
           </a>
         </li>
-        <li class="menu__item">
-          <a class="menu__link" href="./produtos.html">
-            <span class="menu__text">Catalogo</span>
-          </a>
-        </li>
+       
       </ul>
     </nav>
     
     <div>
       <a href="#home">
-        <img class="brand__logo"  src="./img/logobarbeaira1.png" alt="Logo Barbearia Souza">
+        <img class="brand__logo"  src="./img/logobarbeariaAlex.png" alt="Logo Alex Barbearia">
       </a>
     </div>
     <div class="header__toggle">
@@ -53,11 +50,11 @@
   </header>
   <main id="home">
     <div class="main__content1">
-      <h1>Barbearia Souza</h1>
+      <h1>Alex Barbearia</h1>
       <p> Rua Antônio Lago,164 - Campo Grande , Rio de Janeiro-RJ</p>
     </div>
     <div class="main__content2">
-      <img src="./img/banner.jpg" alt="">
+      <img src="./img/Banner Alex Barberia.png" alt="">
     </div>
   </main>
   <section class="technologies">
@@ -111,8 +108,8 @@
       <div class="about__content1">
         <img class="about__photo" src="./img/utensilios.jpg" alt="Utensilios de um barbeiro">
         <div class="about__description">
-          <h2>Barbearia Souza</h2>
-          <p>Localizada na Rua Antônio Lago, 164 a <strong>Barbearia Souza</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2020, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+          <h2>Alex Barbearia</h2>
+          <p>Localizada na Rua Antônio Lago, 164 a <strong>Alex Barbearia</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2020, a Alex Barbearia já é destaque na cidade e conquista novos clientes a cada dia.</p>
           <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
           <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 
