--- a/produtos.html
+++ b/produtos.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Barbearia Souza</title>
-        <meta name="description" content="Portifolio do desenvolvedor front-end Gabriel Ortiz">
+        <title>Alex Barbearia</title>
+        <meta name="description" content="Alex Barbearia">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
       </head>
