--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <div>
       <a href="#home">
-        <img class="brand__logo"  src="./img/logobarbeariaAlex.png" alt="Logo Alex Barbearia">
+        <img class="brand__logo"  src="./img/logoAlex.png" alt="Logo Alex Barbearia">
       </a>
     </div>
     <div class="header__toggle">
